# gdclips

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  SConstruct  build.sh
demo/: .gitignore  icon.svg.import  main.gd  main.gd.uid  main.tscn  project.godot
demo/addons/: gut
demo/clp/: hello.clp  sort.clp
demo/examples/: hello_world.gd  hello_world.gd.uid  hello_world.tscn
demo/test/clips/: test_clips_env.gd  test_clips_env.gd.uid
demo/test/unit/: test_example.gd.uid
src/: ClipsEnv.cpp  ClipsEnv.h  ClipsFact.cpp  ClipsFact.h  ClipsFunctionCallBuilder.cpp  ClipsFunctionCallBuilder.h  ClipsInstance.cpp  ClipsInstance.h  ClipsStringBuilder.cpp  ClipsStringBuilder.h  ClipsValue.cpp  ClipsValue.h  gdclips.cpp  gdclips.h  library.h  register_types.cpp  register_types.h
tests/: test1.cpp
