cmake_minimum_required(VERSION 3.30)
project(gdclips)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

add_subdirectory(extern/godot-cpp)

file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS
        "${CMAKE_CURRENT_SOURCE_DIR}/src/*.h"
        "${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp"
        "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp"
)

file(GLOB CLIPS
        RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}/extern/clips/core"
        "*.h"
        "*.c"
)

source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}}/extern/clips/core" FILES ${CLIPS})

add_library(${PROJECT_NAME} SHARED ${SOURCES} ${CLIPS}
        extern/clips/core/agenda.h
        extern/clips/core/analysis.h
        extern/clips/core/argacces.h
        extern/clips/core/bload.h
        extern/clips/core/bmathfun.h
        extern/clips/core/bsave.h
        extern/clips/core/classcom.h
        extern/clips/core/classexm.h
        extern/clips/core/classfun.h
        extern/clips/core/classinf.h
        extern/clips/core/classini.h
        extern/clips/core/classpsr.h
        extern/clips/core/clips.h
        extern/clips/core/clsltpsr.h
        extern/clips/core/commline.h
        extern/clips/core/conscomp.h
        extern/clips/core/constant.h
        extern/clips/core/constrct.h
        extern/clips/core/constrnt.h
        extern/clips/core/crstrtgy.h
        extern/clips/core/cstrcbin.h
        extern/clips/core/cstrccmp.h
        extern/clips/core/cstrccom.h
        extern/clips/core/cstrcpsr.h
        extern/clips/core/cstrnbin.h
        extern/clips/core/cstrnchk.h
        extern/clips/core/cstrncmp.h
        extern/clips/core/cstrnops.h
        extern/clips/core/cstrnpsr.h
        extern/clips/core/cstrnutl.h
        extern/clips/core/default.h
        extern/clips/core/defins.h
        extern/clips/core/developr.h
        extern/clips/core/dffctbin.h
        extern/clips/core/dffctbsc.h
        extern/clips/core/dffctcmp.h
        extern/clips/core/dffctdef.h
        extern/clips/core/dffctpsr.h
        extern/clips/core/dffnxbin.h
        extern/clips/core/dffnxcmp.h
        extern/clips/core/dffnxexe.h
        extern/clips/core/dffnxfun.h
        extern/clips/core/dffnxpsr.h
        extern/clips/core/dfinsbin.h
        extern/clips/core/dfinscmp.h
        extern/clips/core/drive.h
        extern/clips/core/emathfun.h
        extern/clips/core/engine.h
        extern/clips/core/entities.h
        extern/clips/core/envrnbld.h
        extern/clips/core/envrnmnt.h
        extern/clips/core/evaluatn.h
        extern/clips/core/expressn.h
        extern/clips/core/exprnbin.h
        extern/clips/core/exprnops.h
        extern/clips/core/exprnpsr.h
        extern/clips/core/extnfunc.h
        extern/clips/core/factbin.h
        extern/clips/core/factbld.h
        extern/clips/core/factcmp.h
        extern/clips/core/factcom.h
        extern/clips/core/factfile.h
        extern/clips/core/factfun.h
        extern/clips/core/factgen.h
        extern/clips/core/facthsh.h
        extern/clips/core/factlhs.h
        extern/clips/core/factmch.h
        extern/clips/core/factmngr.h
        extern/clips/core/factprt.h
        extern/clips/core/factqpsr.h
        extern/clips/core/factqury.h
        extern/clips/core/factrete.h
        extern/clips/core/factrhs.h
        extern/clips/core/filecom.h
        extern/clips/core/filertr.h
        extern/clips/core/fileutil.h
        extern/clips/core/generate.h
        extern/clips/core/genrcbin.h
        extern/clips/core/genrccmp.h
        extern/clips/core/genrccom.h
        extern/clips/core/genrcexe.h
        extern/clips/core/genrcfun.h
        extern/clips/core/genrcpsr.h
        extern/clips/core/globlbin.h
        extern/clips/core/globlbsc.h
        extern/clips/core/globlcmp.h
        extern/clips/core/globlcom.h
        extern/clips/core/globldef.h
        extern/clips/core/globlpsr.h
        extern/clips/core/immthpsr.h
        extern/clips/core/incrrset.h
        extern/clips/core/inherpsr.h
        extern/clips/core/inscom.h
        extern/clips/core/insfile.h
        extern/clips/core/insfun.h
        extern/clips/core/insmngr.h
        extern/clips/core/insmoddp.h
        extern/clips/core/insmult.h
        extern/clips/core/inspsr.h
        extern/clips/core/insquery.h
        extern/clips/core/insqypsr.h
        extern/clips/core/iofun.h
        extern/clips/core/lgcldpnd.h
        extern/clips/core/match.h
        extern/clips/core/memalloc.h
        extern/clips/core/miscfun.h
        extern/clips/core/modulbin.h
        extern/clips/core/modulbsc.h
        extern/clips/core/modulcmp.h
        extern/clips/core/moduldef.h
        extern/clips/core/modulpsr.h
        extern/clips/core/modulutl.h
        extern/clips/core/msgcom.h
        extern/clips/core/msgfun.h
        extern/clips/core/msgpass.h
        extern/clips/core/msgpsr.h
        extern/clips/core/multifld.h
        extern/clips/core/multifun.h
        extern/clips/core/network.h
        extern/clips/core/objbin.h
        extern/clips/core/objcmp.h
        extern/clips/core/object.h
        extern/clips/core/objrtbin.h
        extern/clips/core/objrtbld.h
        extern/clips/core/objrtcmp.h
        extern/clips/core/objrtfnx.h
        extern/clips/core/objrtgen.h
        extern/clips/core/objrtmch.h
        extern/clips/core/parsefun.h
        extern/clips/core/pattern.h
        extern/clips/core/pprint.h
        extern/clips/core/prccode.h
        extern/clips/core/prcdrfun.h
        extern/clips/core/prcdrpsr.h
        extern/clips/core/prdctfun.h
        extern/clips/core/prntutil.h
        extern/clips/core/proflfun.h
        extern/clips/core/reorder.h
        extern/clips/core/reteutil.h
        extern/clips/core/retract.h
        extern/clips/core/router.h
        extern/clips/core/rulebin.h
        extern/clips/core/rulebld.h
        extern/clips/core/rulebsc.h
        extern/clips/core/rulecmp.h
        extern/clips/core/rulecom.h
        extern/clips/core/rulecstr.h
        extern/clips/core/ruledef.h
        extern/clips/core/ruledlt.h
        extern/clips/core/rulelhs.h
        extern/clips/core/rulepsr.h
        extern/clips/core/scanner.h
        extern/clips/core/setup.h
        extern/clips/core/sortfun.h
        extern/clips/core/strngfun.h
        extern/clips/core/strngrtr.h
        extern/clips/core/symblbin.h
        extern/clips/core/symblcmp.h
        extern/clips/core/symbol.h
        extern/clips/core/sysdep.h
        extern/clips/core/textpro.h
        extern/clips/core/tmpltbin.h
        extern/clips/core/tmpltbsc.h
        extern/clips/core/tmpltcmp.h
        extern/clips/core/tmpltdef.h
        extern/clips/core/tmpltfun.h
        extern/clips/core/tmpltlhs.h
        extern/clips/core/tmpltpsr.h
        extern/clips/core/tmpltrhs.h
        extern/clips/core/tmpltutl.h
        extern/clips/core/userdata.h
        extern/clips/core/usrsetup.h
        extern/clips/core/utility.h
        extern/clips/core/watch.h

        extern/clips/core/agenda.c
        extern/clips/core/analysis.c
        extern/clips/core/argacces.c
        extern/clips/core/bload.c
        extern/clips/core/bmathfun.c
        extern/clips/core/bsave.c
        extern/clips/core/classcom.c
        extern/clips/core/classexm.c
        extern/clips/core/classfun.c
        extern/clips/core/classinf.c
        extern/clips/core/classini.c
        extern/clips/core/classpsr.c
        extern/clips/core/clsltpsr.c
        extern/clips/core/commline.c
        extern/clips/core/conscomp.c
        extern/clips/core/constrct.c
        extern/clips/core/constrnt.c
        extern/clips/core/crstrtgy.c
        extern/clips/core/cstrcbin.c
        extern/clips/core/cstrccom.c
        extern/clips/core/cstrcpsr.c
        extern/clips/core/cstrnbin.c
        extern/clips/core/cstrnchk.c
        extern/clips/core/cstrncmp.c
        extern/clips/core/cstrnops.c
        extern/clips/core/cstrnpsr.c
        extern/clips/core/cstrnutl.c
        extern/clips/core/default.c
        extern/clips/core/defins.c
        extern/clips/core/developr.c
        extern/clips/core/dffctbin.c
        extern/clips/core/dffctbsc.c
        extern/clips/core/dffctcmp.c
        extern/clips/core/dffctdef.c
        extern/clips/core/dffctpsr.c
        extern/clips/core/dffnxbin.c
        extern/clips/core/dffnxcmp.c
        extern/clips/core/dffnxexe.c
        extern/clips/core/dffnxfun.c
        extern/clips/core/dffnxpsr.c
        extern/clips/core/dfinsbin.c
        extern/clips/core/dfinscmp.c
        extern/clips/core/drive.c
        extern/clips/core/emathfun.c
        extern/clips/core/engine.c
        extern/clips/core/envrnbld.c
        extern/clips/core/envrnmnt.c
        extern/clips/core/evaluatn.c
        extern/clips/core/expressn.c
        extern/clips/core/exprnbin.c
        extern/clips/core/exprnops.c
        extern/clips/core/exprnpsr.c
        extern/clips/core/extnfunc.c
        extern/clips/core/factbin.c
        extern/clips/core/factbld.c
        extern/clips/core/factcmp.c
        extern/clips/core/factcom.c
        extern/clips/core/factfile.c
        extern/clips/core/factfun.c
        extern/clips/core/factgen.c
        extern/clips/core/facthsh.c
        extern/clips/core/factlhs.c
        extern/clips/core/factmch.c
        extern/clips/core/factmngr.c
        extern/clips/core/factprt.c
        extern/clips/core/factqpsr.c
        extern/clips/core/factqury.c
        extern/clips/core/factrete.c
        extern/clips/core/factrhs.c
        extern/clips/core/filecom.c
        extern/clips/core/filertr.c
        extern/clips/core/fileutil.c
        extern/clips/core/generate.c
        extern/clips/core/genrcbin.c
        extern/clips/core/genrccmp.c
        extern/clips/core/genrccom.c
        extern/clips/core/genrcexe.c
        extern/clips/core/genrcfun.c
        extern/clips/core/genrcpsr.c
        extern/clips/core/globlbin.c
        extern/clips/core/globlbsc.c
        extern/clips/core/globlcmp.c
        extern/clips/core/globlcom.c
        extern/clips/core/globldef.c
        extern/clips/core/globlpsr.c
        extern/clips/core/immthpsr.c
        extern/clips/core/incrrset.c
        extern/clips/core/inherpsr.c
        extern/clips/core/inscom.c
        extern/clips/core/insfile.c
        extern/clips/core/insfun.c
        extern/clips/core/insmngr.c
        extern/clips/core/insmoddp.c
        extern/clips/core/insmult.c
        extern/clips/core/inspsr.c
        extern/clips/core/insquery.c
        extern/clips/core/insqypsr.c
        extern/clips/core/iofun.c
        extern/clips/core/lgcldpnd.c
        extern/clips/core/main.c
        extern/clips/core/memalloc.c
        extern/clips/core/miscfun.c
        extern/clips/core/modulbin.c
        extern/clips/core/modulbsc.c
        extern/clips/core/modulcmp.c
        extern/clips/core/moduldef.c
        extern/clips/core/modulpsr.c
        extern/clips/core/modulutl.c
        extern/clips/core/msgcom.c
        extern/clips/core/msgfun.c
        extern/clips/core/msgpass.c
        extern/clips/core/msgpsr.c
        extern/clips/core/multifld.c
        extern/clips/core/multifun.c
        extern/clips/core/objbin.c
        extern/clips/core/objcmp.c
        extern/clips/core/objrtbin.c
        extern/clips/core/objrtbld.c
        extern/clips/core/objrtcmp.c
        extern/clips/core/objrtfnx.c
        extern/clips/core/objrtgen.c
        extern/clips/core/objrtmch.c
        extern/clips/core/parsefun.c
        extern/clips/core/pattern.c
        extern/clips/core/pprint.c
        extern/clips/core/prccode.c
        extern/clips/core/prcdrfun.c
        extern/clips/core/prcdrpsr.c
        extern/clips/core/prdctfun.c
        extern/clips/core/prntutil.c
        extern/clips/core/proflfun.c
        extern/clips/core/reorder.c
        extern/clips/core/reteutil.c
        extern/clips/core/retract.c
        extern/clips/core/router.c
        extern/clips/core/rulebin.c
        extern/clips/core/rulebld.c
        extern/clips/core/rulebsc.c
        extern/clips/core/rulecmp.c
        extern/clips/core/rulecom.c
        extern/clips/core/rulecstr.c
        extern/clips/core/ruledef.c
        extern/clips/core/ruledlt.c
        extern/clips/core/rulelhs.c
        extern/clips/core/rulepsr.c
        extern/clips/core/scanner.c
        extern/clips/core/sortfun.c
        extern/clips/core/strngfun.c
        extern/clips/core/strngrtr.c
        extern/clips/core/symblbin.c
        extern/clips/core/symblcmp.c
        extern/clips/core/symbol.c
        extern/clips/core/sysdep.c
        extern/clips/core/textpro.c
        extern/clips/core/tmpltbin.c
        extern/clips/core/tmpltbsc.c
        extern/clips/core/tmpltcmp.c
        extern/clips/core/tmpltdef.c
        extern/clips/core/tmpltfun.c
        extern/clips/core/tmpltlhs.c
        extern/clips/core/tmpltpsr.c
        extern/clips/core/tmpltrhs.c
        extern/clips/core/tmpltutl.c
        extern/clips/core/userdata.c
        extern/clips/core/userfunctions.c
        extern/clips/core/utility.c
        extern/clips/core/watch.c

        src/ClipsFact.h
        src/ClipsFact.cpp
        src/ClipsEnv.h
        src/ClipsEnv.cpp
        src/ClipsInstance.h
        src/ClipsInstance.cpp
        src/ClipsValue.h
        src/ClipsValue.cpp
)

target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src")
target_include_directories(${PROJECT_NAME} PUBLIC extern/godot-cpp/gen/include)
target_include_directories(${PROJECT_NAME} PUBLIC extern/clips/core)
target_link_libraries(${PROJECT_NAME} PUBLIC godot::cpp)

source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}/src" PREFIX src FILES ${SOURCES})
